# task_breakdown_openrave

./: README.md
backups/: HW3.py  __init__.py  add_two_ints_test.py  baxter_backup.kinbody.xml  baxter_backup_2.kinbody.xml  baxter_left_arm_backup.kinbody.xml  baxter_left_arm_backup_2.kinbody.xml  baxter_primitives.kinbody.xml  baxter_right_arm_backup.kinbody.xml  baxter_right_arm_backup_2.kinbody.xml  costwrapper_backup.py  final_output.txt  final_output_2.txt  goggles_robot_backup.py  hw3.env.xml  out.txt  service_test_backup.py  taskbreakdown_python_backup.py  taskbreakdown_python_backup_EXECUTING.py  taskbreakdown_python_backup_MOD-BUGGEDpy  taskbreakdown_python_backup_WORKING.py  taskbreakdown_python_backup_WORKING_2.py  taskbreakdown_python_backup_WORKING_3.py  taskbreakdown_python_backup_WORKING_4py  taskbreakdown_python_backup_WORKING_LONG_VER.py  taskbreakdown_python_backup_WORKING_ros_grid.py  tbo_out
data/: baxter.dae  baxter.robot.xml  table.xml
ikfast_solvers/: baxter_ik_left.cpp  baxter_ik_left_2.cpp  baxter_ik_left_3.cpp  baxter_ik_left_4.cpp  baxter_ik_left_no_base.cpp  baxter_ik_left_no_base_2.cpp  baxter_ik_right.cpp  baxter_ik_right_2.cpp  baxter_ik_right_3.cpp  baxter_ik_right_4.cpp  baxter_ik_right_no_base.cpp  baxter_ik_right_no_base_2.cpp
task_breakdown_openrave/: CMakeLists.txt  apron_removal.py  apron_robot.kinbody.xml  apron_robot.robot.xml  apron_robot_env.env.xml  apron_robot_test.py  baxter.dae  baxter.kinbody.xml  baxter.robot.xml  baxter.urdf  baxter_left_arm.kinbody.xml  baxter_left_arm.robot.xml  baxter_openrave_traj_execution.py  baxter_right_arm.kinbody.xml  baxter_right_arm.robot.xml  baxter_w_goggles.kinbody.xml  baxter_w_goggles.robot.xml  baxter_with_apron.kinbody.xml  baxter_with_apron.robot.xml  costwrapper.py  empty.env.xml  empty2.env.xml  goggles_robot.py  goggles_test.py  heres_how_backend.py  heres_how_play_trajs.py  human2_robot.kinbody.xml  human3_robot.kinbody.xml  human_bio_two_arms.xml  human_bio_two_arms_mod.xml  human_mobile.robot.xml  human_robot.py  human_robot_test.py  human_test.env.xml  human_trajopt.py  package.xml  ppe_base.py  service_test.py  setup.py  strap_robot.kinbody.xml  (+7 more)
task_breakdown_openrave/include/task_breakdown_openrave/: add_two_ints.h
task_breakdown_openrave/launch/: task_breakdown_openrave.launch
task_breakdown_openrave/results_log/: CartDevCostX10_results(failed)  CartDevCostX1_results(success)
task_breakdown_openrave/src/: add_two_ints.cpp  add_two_ints_wrapper.cpp
task_breakdown_openrave/src/meshes/base/: pedestal_link_collision.stl
task_breakdown_openrave/src/meshes/electric_gripper/: electric_gripper_base.stl
task_breakdown_openrave/src/meshes/electric_gripper/fingers/: basic_hard_tip.stl  basic_soft_tip.stl  half_round_tip.stl  limiter.stl  paddle_tip.stl
task_breakdown_openrave/src/meshes/head/: H0.stl  H1.stl
task_breakdown_openrave/src/meshes/lower_elbow/: E1.stl
task_breakdown_openrave/src/meshes/lower_forearm/: W1.stl
task_breakdown_openrave/src/meshes/lower_shoulder/: S1.stl
task_breakdown_openrave/src/meshes/torso/: base_link_collision.stl
task_breakdown_openrave/src/meshes/upper_elbow/: E0.stl
task_breakdown_openrave/src/meshes/upper_forearm/: W0.stl
task_breakdown_openrave/src/meshes/upper_shoulder/: S0.stl
task_breakdown_openrave/src/meshes/wrist/: W2.stl
task_breakdown_openrave/srv/: OpenRaveIK.srv
