<?xml version="1.0"?>
<package>
  <name>task_breakdown_openrave</name>
  <version>0.0.0</version>
  <description>The task_breakdown_openrave package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="anto@todo.todo">anto</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/task_breakdown_openrave</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sdf_tools</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_examples</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>baxter_maintenance_msgs</build_depend>
  <build_depend>baxter_tools</build_depend>
  <build_depend>baxter_sim_controllers</build_depend>
  <build_depend>baxter_sim_hardware</build_depend>
  <build_depend>baxter_sim_io</build_depend>
  <build_depend>baxter_sim_kinematics</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>baxter_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_manipulation</build_depend>
  <build_depend>moveit_pr2</build_depend>
  <build_depend>moviet_plugins</build_depend>
  <build_depend>moveit</build_depend>
  <build_depend>Eigen</build_depend>
<!--  <build_depend>baxter_moveit_test</build_depend>-->

  <run_depend>sdf_tools</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_examples</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>baxter_maintenance_msgs</run_depend>
  <run_depend>baxter_sim_controllers</run_depend>
  <run_depend>baxter_sim_hardware</run_depend>
  <run_depend>baxter_sim_io</run_depend>
  <run_depend>baxter_sim_kinematics</run_depend>
  <run_depend>baxter_tools</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>baxter_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_core</run_depend> 
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_manipulation</run_depend> 
  <run_depend>moveit_pr2</run_depend>
  <run_depend>moviet_plugins</run_depend>
  <run_depend>moviet</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>Eigen</run_depend>
 <!-- <run_depend>baxter_moveit_test</run_depend>-->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
